2006-03-11  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Added gnome-applets, sabayon, pesselus.

	* releases.xml.in: Complete desktop, developer-libs sections.

	* update-stats.py (LocStatistics.check_lang_support): 
	Correct debug output.

== Release 0.9 ==
	
2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* INSTALL (INSTALL): Small update.

	* Makefile (FILES): Updated.

	* update-stats.py (LocStatistics.__init__): 
	Use modules.CvsModule(module, 1) so checkouts are done.

	* defaults.py (WEBDEBUG): Disable for release.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* HACKING: Mark below TODO item as done.

	* update-stats.py: Add optimizations (do not regenerate PO files
	if not needed: both POT hasn't changed and PO files have not been
	modified since).

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Small changes.

	* releases.py (get_aggregate_stats): Added, used.
	* templates/list-releases.tmpl: Added.
	* templates/release.tmpl: Added.

	* HACKING: Some runtime notes.

	* Makefile: Add dist and release targets.

	* teams.py (TranslationLanguages): add show_hidden parameter.

	* update-stats.py (LocStatistics.update_stats_database): 
	Correct POT clean-up stuff (buggy SQLObject?).

	* utils.py (getElementContents, getElementText)
	(getElementAttribute): Added misc xml.dom.minidom functions.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* HACKING: Add more TODO items.

	* utils.py (TemplateInspector): Use WEBDEBUG.
	* defaults.py (WEBDEBUG): Added.

	* INSTALL: Added.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* defaults.py (generate_docs): disable it (it's too slow).

	* update-stats.py (LocStatistics.doc_l10n_stats): pass potbase as
	well to update_doc_po_files().
	(LocStatistics.generate_translated_docs): implement translated doc
	generation.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* defaults.py: Set modules_xml, releases_xml, teams_xml.
	* modules.py: Use defaults.modules_xml.