@@ -1,5 +1,7 @@
 2006-03-11  Danilo Šegan  <danilo@gnome.org>
 
+	* releases.xml.in: Fix modules.
+
 	* gnome-modules.xml.in: Added gnome-applets, sabayon, pesselus.
 
 	* releases.xml.in: Complete desktop, developer-libs sections.
